# bitart-generator

./: Cargo.toml  LICENSE  README.md
.agents/skills/: generate-pixel-art.md
.claude/commands/: generate.md
.claude/skills/generate/: SKILL.md
.github/workflows/: release.yml
docs/plans/: 2026-03-08-bitart-design.md  2026-03-08-bitart-plan.md
npm/: install.js  package.json
src/: config.rs  main.rs
src/exporter/: mod.rs
src/generator/: claude.rs  dalle.rs  fallback.rs  mod.rs  palette.rs
src/tui/: mod.rs
