[package]
name = "bitart-generator"
version = "0.1.0"
edition = "2021"
description = "Terminal pixel art generator — create 64x64 art from text prompts using AI or math patterns"
license = "MIT"
repository = "https://github.com/ezani92/bitart-generator"
homepage = "https://github.com/ezani92/bitart-generator"
keywords = ["pixel-art", "terminal", "tui", "generative-art", "cli"]
categories = ["command-line-utilities", "graphics"]
readme = "README.md"

[[bin]]
name = "bitart"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
image = "0.25"
serde_json = "1"
