[package]
name = "bitart-generator"
version = "1.0.0"
edition = "2021"
description = "Terminal pixel art generator — create art from text prompts using AI image generation"
license = "MIT"
repository = "https://github.com/ezani92/bitart-generator"
homepage = "https://github.com/ezani92/bitart-generator"
keywords = ["pixel-art", "terminal", "tui", "generative-art", "cli"]
categories = ["command-line-utilities", "graphics"]
readme = "README.md"

[[bin]]
name = "bitart"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
image = "0.25"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
dirs = "5"
base64 = "0.22"
